@@ -36,7 +36,6 @@ functionality. Patches to make autoconf detect these cases and generate the
 required shims are OK.
 
 Current shims:
-  * C99 integer types 'inttypes.h' 
   * sys/statvfs.h to convert from BSD/old-glibc statfs to SUS statvfs
   * rfc2553 hostname resolution (methods/rfc*), shims to normal gethostbyname.
     The more adventurous could steal the KAME IPv6 enabled resolvers for those
