@@ -1,25 +1,0 @@
-#
-# This file lists common architectures for cross-compilation (CPUs, not
-# OSs), and the endian-ness and relative type sizes. It is not needed for
-# native compilation.
-#
-# If you wish to cross-compile APT, and your architecture is not listed
-# here, you should add it, and submit it by email to the APT team at
-# <apt@packages.debian.org>.
-#
-# This is used primarily for the MD5 algorithm.
-# The format is:-
-# CPU endian sizeof: char, int, short, long
-i386    little  1 4 2 4
-amd64   little  1 4 2 8
-armeb   big     1 4 2 4
-arm     little  1 4 2 4
-alpha   little  1 4 2 8
-mipsel  little  1 4 2 4
-sparc   big     1 4 2 4
-sparc64 big     1 4 2 8
-m68k    big     1 4 2 4
-powerpc big     1 4 2 4
-mips    big     1 4 2 4
-hppa    big     1 4 2 4
-m32r	big	1 4 2 4
