@@ -4,6 +4,9 @@ apt (0.9.5) UNRELEASED; urgency=low
   * buildlib/podomain.mak:
     - ensure that all sources end up in the srclist so that we don't
       forget to extract half of the translation strings
+  * buildlib/inttypes.h.in:
+    - remove inttypes.h compatibility as providing such a c99 types
+      compatibility conflicts with the usage of c99 type long long
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 21 May 2012 15:10:49 +0200
 
